// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchField Should render correctly 1`] = `
<div
  class="tss-m3aszr-SearchField-root"
>
  <div
    class="MuiFormControl-root tss-10-TextField-withEndIcon-ref tss-18osclz-TextField-root-TextField-withEndIcon mui-1nrlq1o-MuiFormControl-root"
  >
    <div
      class="tss-bdw984-Surface-root"
    >
      <div
        class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd tss-10-TextField-inputRoot-ref tss-15855om-TextField-inputRoot-TextField-adornedEnd-SearchField-input mui-12ndy8t-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="tss-1nw1upr-TextField-input-SearchField-inputElement-SearchField-variantPrimary MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputTypeSearch MuiInputBase-inputAdornedEnd mui-1j5luls-MuiInputBase-input-MuiOutlinedInput-input"
          type="search"
          value=""
        />
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium tss-10-TextField-adornment-ref tss-npz68o-InputAdornment-root-TextField-adornment-TextField-endAdornment mui-1laqsz7-MuiInputAdornment-root"
        >
          <div
            class="tss-qnz563-SearchField-adornedEnd"
          />
        </div>
        <fieldset
          aria-hidden="true"
          class="tss-tyiogj-TextField-notchedOutline tss-10-TextField-notchedOutline-ref MuiOutlinedInput-notchedOutline mui-1d3z3hw-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="mui-nnbavb"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="tss-19z6szl-TextField-helpers"
    />
  </div>
  <button
    class="MuiButtonBase-root tss-14-SearchField-primaryButtonSm-ref tss-1qxyk9i-ButtonBase-root-ButtonBase-focusOut-PrimarySearchButton-sizeSm-SearchField-primaryButton-SearchField-primaryButtonSm mui-10d1a0h-MuiButtonBase-root"
    tabindex="0"
    type="submit"
  >
    <div
      class="tss-th7lmj-PrimarySearchButton-inner tss-13-PrimarySearchButton-inner-ref"
    >
      <div
        class="tss-pyz8vm-SpinnerWithBackdrop-root"
      >
        <div
          class=""
        >
          <div
            class="tss-1yk1nuy-PrimarySearchButton-content"
          >
            <div
              class="tss-w1sjks-Icon-root-Icon-sizeMd"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-i4bv87-MuiSvgIcon-root"
                color="inherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                search.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SearchField Should render correctly secondary variant 1`] = `
<div
  class="tss-m3aszr-SearchField-root"
>
  <div
    class="MuiFormControl-root tss-10-TextField-withEndIcon-ref tss-18osclz-TextField-root-TextField-withEndIcon mui-1nrlq1o-MuiFormControl-root"
  >
    <div
      class="tss-bdw984-Surface-root"
    >
      <div
        class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedEnd tss-10-TextField-inputRoot-ref tss-15855om-TextField-inputRoot-TextField-adornedEnd-SearchField-input mui-12ndy8t-MuiInputBase-root-MuiOutlinedInput-root"
      >
        <input
          aria-invalid="false"
          class="tss-oix7dc-TextField-input-SearchField-inputElement-SearchField-variantSecondary MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputTypeSearch MuiInputBase-inputAdornedEnd mui-1j5luls-MuiInputBase-input-MuiOutlinedInput-input"
          type="search"
          value=""
        />
        <div
          class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium tss-10-TextField-adornment-ref tss-npz68o-InputAdornment-root-TextField-adornment-TextField-endAdornment mui-1laqsz7-MuiInputAdornment-root"
        >
          <div
            class="tss-qnz563-SearchField-adornedEnd"
          >
            <button
              class="MuiButtonBase-root tss-1mzjinm-ButtonBase-root-ButtonBase-focusOut-IconButton-root-SearchField-secondarySearchButton mui-10d1a0h-MuiButtonBase-root"
              tabindex="0"
              type="submit"
            >
              <div
                class="tss-w1sjks-Icon-root-Icon-sizeMd"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-i4bv87-MuiSvgIcon-root"
                  color="inherit"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  search.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
        <fieldset
          aria-hidden="true"
          class="tss-tyiogj-TextField-notchedOutline tss-10-TextField-notchedOutline-ref MuiOutlinedInput-notchedOutline mui-1d3z3hw-MuiOutlinedInput-notchedOutline"
        >
          <legend
            class="mui-nnbavb"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      class="tss-19z6szl-TextField-helpers"
    />
  </div>
</div>
`;
